// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when multiple expenses are added 1`] = `
<div>
  <p>
    
                        Viewing 5 
                        expenses 
                        totalling $50.00
                    
  </p>
</div>
`;

exports[`should render correctly when no expenses are added 1`] = `<div />`;

exports[`should render correctly when single expense is added 1`] = `
<div>
  <p>
    
                        Viewing 1 
                        expense 
                        totalling $0.25
                    
  </p>
</div>
`;
